Fix colored words being visible in BG boxes

--- a/mangaread2/style/main.css
+++ b/mangaread2/style/main.css
@@ -106,6 +106,10 @@ h4 a {
     color: transparent;
     user-select: none;
     pointer-events: none;
+
+    & * {
+        color: transparent !important;
+    }
 }
 
 .ocr-box-fg {
